# rosetta

./: README.md  env.yml  pyproject.toml  readme.txt  run_dataserv.bat  run_gui.bat  run_inserv.bat  run_inserv_cwave.bat  run_nspyre - Shortcut.lnk  run_nspyre.bat
docs/: index.html
docs/source/: conf.py  index.rst
docs/src/: conf.py
src/rosetta/: inserv_cwave.py  inserv_primary.py  inserv_secondary.py  insmgr.py
src/rosetta/drivers/: driver_subsystems.py  gaussmeter455.py
src/rosetta/drivers/highfinesse/: WS8.py  wlmConst.py  wlmData.py
src/rosetta/drivers/hubner/: gtr.py  gtr_wrapper.py
src/rosetta/drivers/ni/: ni_analogTasks.py  ni_motionControl.py  ni_photonCounting.py
src/rosetta/drivers/srs/: srs396.py
src/rosetta/drivers/swabian/: PS82.py
src/rosetta/drivers/thorlabs/: PM100USB.py
src/rosetta/experiments/: logs  odmr.py
src/rosetta/experiments/TaskVsTime/: TaskVsTime_EXP.py  TaskVsTime_GUI.py
src/rosetta/experiments/cwODMR/: signalGenerator_EXP.py  signalGenerator_GUI.py
src/rosetta/experiments/cwave/: cwave_EXP.py  cwave_GUI.py
src/rosetta/experiments/fsmScan/: fsmScan_EXP.py  fsmScan_EXP_buggy.py  fsmScan_GUI.py
src/rosetta/experiments/powerMeter/: powerMeter_EXP.py  powerMeter_GUI.py
src/rosetta/gui/: app.py  elements.py
